--- a/css/index.html
+++ b/css/index.html
@@ -12,7 +12,7 @@
   </script>
   <style type="text/css">
   <!--
-    input:disabled {
+    input[type=text] {
       background-color: white;
     }
   -->
