--- a/css/index.html
+++ b/css/index.html
@@ -12,7 +12,7 @@
   </script>
   <style type="text/css">
   <!--
-    input[type=text] {
+    input[type="text"] {
       background-color: white;
     }
   -->
@@ -32,6 +32,8 @@
     <br>
     <input type="button" value="切り替える" onclick="change();"><br>
     <br>
+    <br>
+    参考 https://ja.wikibooks.org/wiki/CSS/%E8%A8%98%E8%BF%B0
     <br>
     参考 http://wp-e.org/2014/05/20/2420/
     <br>
